disable turbo for errors

--- a/public/404.html
+++ b/public/404.html
@@ -9,11 +9,10 @@
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
     }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    h1 { font-size: 100%; color: #d00909; line-height: 1.5em; }
   </style>
+  <meta name="turbo-cache-control" content="no-cache">
 </head>
 
 <body>
