disable turbo for errors

--- a/public/422.html
+++ b/public/422.html
@@ -10,9 +10,8 @@
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
     }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    h1 { font-size: 100%; color: #d00909; line-height: 1.5em; }
   </style>
-  <meta name="turbo-cache-control" content="no-cache">
 </head>
 
 <body>
